# project_viper

./: .gitignore  README.md  WORKSPACE  main.py  requirements.txt
api_request/: api_request.py  api_request_test.py
apps/: joke_importer.py
data_structure_practice/: big_o_notation.py  linked_list.py  list_sort.py
flask_k8s_docker/: .dockerignore  Dockerfile  docker-compose.yaml
flask_k8s_docker/kubernetes/: service.yaml
flask_k8s_docker/practice_a/: Dockerfile  app.py  docker-compose.yml  flask-deployment.yaml  flask-service.yaml  mongodb-deployment.yaml  readme.md
flask_k8s_docker/practice_b/: deployment.yaml  readme.md  service.yaml
flask_k8s_docker/practice_c/: app.py  deployment.yaml  readme.md
flask_k8s_docker/src/: app.py
iter_problems/: ex1.py  ex2.py  ex5.py  list_sort.py  map.py
kafka/: consumer_kafka.py  docker-compose.yaml  producer_kafka.py
local_inventory/: local_inventory.py  requirements.txt
local_inventory/old/: local_inventory.py
log_muncher/: log_munch.py
network_hosts/: README.md
sqlite_storage/: sqlite.db  sqlite_storage.py
sqlite_storage/sql_scripts/: create.py
src/api_request/: BUILD.bazel  Dockerfile  api_request.py  api_request_test.py  chucknamespace.yaml  cluster-role-binding.yaml  job.yaml  service-account.yaml  service-role-binding.yaml  service-role.yaml
src/chuck_api/: Dockerfile  app.py  docker-compose.yaml  joke_importer.py  requirements.txt
src/log_muncher/: log_munch.py
src/port_hosts_app/: Dockerfile  docker-compose.yaml  (+3 more)
ssh_hosts_app/: ssh_hosts.py
wifi/: BUILD.bazel  README.md  wifi.py
(+19 files in other folders)
